Fixing dark mode issue
Adding card-body, download classes and also updating style.css  in order to fix dark mode issue

--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ body.dark-mode .navbar {
     border-radius: 8px;        /* rounded corners */
     overflow: hidden;          /*video doesn't cover the rounded corners */
     box-shadow: 0 4px 8px rgba(0,0,0,0.1); /* shadow */
+    align-items: center;
     
 }
   .introduction {
@@ -173,8 +174,23 @@ body.dark-mode .navbar {
   body.dark-mode {
     background-color: #121212 !important;
     color: #f5f5f5 !important;
-  
   }
+  main.dark-mode {
+  background-color: #1e1e1e !important;
+  }
+
+  body.dark-mode .container-fluid { 
+  background-color: black !important;
+ }
+
+  body.dark-mode .videoCard  { 
+  background-color: black;
+  padding: 4px;
+  border-radius: 12px;
+  border: 2px solid black;
+  overflow: hidden;
+}
+  body.dark-mode .download,
   body.dark-mode .modulePlainText,
   body.dark-mode .card-text,
   body.dark-mode .card,
@@ -182,10 +198,12 @@ body.dark-mode .navbar {
   body.dark-mode .modal-content,
   body.dark-mode .introduction,
   body.dark-mode .introductionCard {
-    background-color: #1e1e1e !important;;
+    background-color: #1e1e1e !important;
     color: #ffffff !important;
   }
-  
+  body.dark-mode .videoCard {
+  background-color: black !important;
+}
   body.dark-mode .btn-dark {
     background-color: #444 !important;
     border-color: #666 !important;
